<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About IRemote</string>
    <string name="author">Author: Morten Striboldt.</string>
    <string name="email">Email: ihc@striboldt.com</string>
    <string name="aboutText">IRemote Viewer is a remote control for LK / Schneider Electric IHC (Intelligent House Control).</string>
    <string name="app_name">IRemote Viewer</string>
    <string name="lan_host">LAN Host</string>
    <string name="lan">LAN</string>
    <string name="lan_host_help">IP or Hostname</string>
    <string name="wan_host">WAN Host</string>
    <string name="wan">WAN</string>
    <string name="wan_host_help">IP or Hostname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="default_connection_type">Preferred connection type</string>
    <string name="locations">Locations</string>
    <string name="favourites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="active_resources">Active Resources</string>
    <string name="resources">Resources: </string>
    <string name="upperleft">ø.v</string>
    <string name="upperright">ø.h</string>
    <string name="midleft">m.v</string>
    <string name="midright">m.h</string>
    <string name="lowerleft">n.v</string>
    <string name="lowerright">n.h</string>
    <string name="loginbutton">Login</string>
    <string name="reload_project">Reload project</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="login_msg">Login. Please wait...</string>
    <string name="login_failed_msg">Login failed: </string>
    <string name="loading_project_msg">Loading project. Please wait...</string>
    <string name="application_error">Application error: %1$s</string>
    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>
    <string name="autologin">Autologin</string>
    <string name="left">l</string>
    <string name="right">r</string>
    <string name="up">ø</string>
    <string name="down">n</string>
    <string name="edit_resource">Edit Resource</string>

    <string-array name="ContextMenu">
        <item>Add/Remove Favourite</item>
        <item>Delete Resource</item>
    </string-array>
    <string-array name="ContextMenuRemoveFav">
        <item>Remove Favourite</item>
    </string-array>

</resources>