<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<TableLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:background="#ff999999">
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/settings"
				android:textStyle="bold" android:textColor="#ff000000">
			</TextView>

		</TableRow>
	</TableLayout>
	<TableLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TableRow>
			<TextView android:text="@string/lan_host" android:padding="3dip">
			</TextView>
			<EditText android:id="@+ihc/lan_ip" android:hint="@string/lan_host_help" android:layout_weight="15">
			</EditText>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/wan_host" android:padding="3dip">
			</TextView>
			<EditText android:id="@+ihc/wan_ip" android:hint="@string/wan_host_help" android:layout_weight="15" >
			</EditText>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/username" android:padding="3dip">
			</TextView>
			<EditText android:id="@+ihc/username" android:layout_weight="50">
			</EditText>
		</TableRow>
		<TableRow>
			<TextView android:text="@string/password" android:padding="3dip">
			</TextView>
			<EditText android:id="@+ihc/password" android:inputType="textPassword"
				android:layout_weight="50">
			</EditText>
		</TableRow>
	</TableLayout>
	<TableLayout android:layout_width="match_parent"
		 android:orientation="vertical">
		<TableRow>
			<TextView android:text="@string/connect_wan_only"
				android:padding="3dip">
			</TextView>
			<CheckBox android:id="@+ihc/WanOnly" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></CheckBox>
		</TableRow>
		<TableRow android:padding="3dip">
			<TextView android:text="@string/reload_project" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<CheckBox android:id="@+ihc/reloadProject" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="true"></CheckBox>

		</TableRow>
		<TableRow android:padding="3dip">
			<TextView android:text="@string/autologin" android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<CheckBox android:id="@+ihc/autologin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="true"></CheckBox>

		</TableRow>
	</TableLayout>
</TableLayout>

